# stinfopp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/stinfopp/: exceptions.h  stinfopp.h  stinfopp_global.h
src/: TidyXtras.cpp  TidyXtras.h  stinfoexcepts.cpp  stinfopp.cpp  stinfopp_internals.h
